Added FarmSpot Create and Index

--- a/Views/FarmSpot/Create.cshtml
+++ b/Views/FarmSpot/Create.cshtml
@@ -3,10 +3,20 @@
 *@
 @{
 }
+@* @model OSRSHelper.Models.FarmType *@
 
 <h1>Farm Spot</h1>
 
-<div class="">
+<div class="create">
     <label class="form-label">Name</label>
     <input class="form-control" type="text" id="name" name="name" />
+    <label class="form-label">Time</label>
+    <input class="form-control" type="number" id="time" name="time" />
+    <label class="form-label">Farm Type</label>
+    "
+    <br />
+    <input type="submit" value="Create"/>
+    @* <select asp-for="FarmName" asp-items="Model.FarmType">
+        <option value="">Select</option>
+    </select> *@
 </div>
