Added Material Controller Added Index for materials

--- a/Views/FarmSpot/Index.cshtml
+++ b/Views/FarmSpot/Index.cshtml
@@ -18,6 +18,7 @@
 			<th>@Html.DisplayNameFor(model => model.SpotName)</th>
 			<th>@Html.DisplayNameFor(model => model.Time)</th>
 			<th>@Html.DisplayNameFor(model => model.FarmType)</th>
+			<th>Actions</th>
 		</tr>
 	</thead>
 	<tbody>
