Added Product Controller Added Product Index Added rediretion to material list

--- a/Views/FarmSpot/Delete.cshtml
+++ b/Views/FarmSpot/Delete.cshtml
@@ -18,6 +18,6 @@
         <br />
         
     </div>
-<form method="post">
+<form method="post" asp-controller="FarmSpot" asp-action="Delete">
     <button type="button" class="btn btn-danger form-control">Delete</button>
 </form>
