--- a/Views/FarmSpot/Create.cshtml
+++ b/Views/FarmSpot/Create.cshtml
@@ -3,20 +3,31 @@
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@* @{
-    ViewData["Title"] = "FarmType";
-} *@
+@{
+    ViewData["Title"] = "Create";
+}
 
 
 <h1>Farm Spot</h1>
 <form method="post">
     <div class="create">
-        <label class="form-label">Name</label>
-        <input class="form-control" type="text" asp-for="SpotName" />
-        <label class="form-label">Time</label>
-        <input class="form-control" type="number" asp-for="Time"/>
-        <label class="form-label">Farm Type</label>
+        <div class="form-group">
+            <label class="form-label">Name</label>
+            <input class="form-control" type="text" asp-for="SpotName" />
+        </div>
+        <div class="form-group">
+            <label class="form-label">Time</label>
+            <input class="form-control" type="number" asp-for="Time"/>
+        </div>
+        <div class="form-group">
+            <label class="form-label">Farm Type</label>
+            <select asp-for="FarmTypeId" class="form-control" asp-items="ViewBag.FarmTypeId">
+                <option value="">Select</option> <!-- To be nullable value="" -->
+            </select>
+        </div>
         <br />
-        <button type="submit" class="btn btn-primary">Add</button>
+        <div class="form-group">
+            <input type="submit" value="Add" class="btn btn-primary" />
+        </div>
     </div>
 </form>
