Added edit view Added proper id call for onclick function Minor code formating tweaks

--- a/Views/FarmSpot/Index.cshtml
+++ b/Views/FarmSpot/Index.cshtml
@@ -10,19 +10,33 @@
 <table class="table">
 	<thead>
 		<tr>
-			<th>@Html.DisplayNameFor(model => model.SpotName)</th>
-			<th>@Html.DisplayNameFor(model => model.Time)</th>
-			<th>@Html.DisplayNameFor(model => model.FarmType.FarmName)</th>
-			<th>Actions</th>
+			<th>
+				@Html.DisplayNameFor(model => model.SpotName)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.Time)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.FarmType.FarmName)
+			</th>
+			<th>
+				Actions
+			</th>
 		</tr>
 	</thead>
 	<tbody>
 		@foreach (var item in Model)
 		{
 		<tr>
-			<td>@Html.DisplayFor(modelItem => item.SpotName)</td>
-			<td>@Html.DisplayFor(modelItem => item.Time)</td>
-			<td>@Html.DisplayFor(modelItem => item.FarmTypeId)</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.SpotName)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.Time)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.FarmTypeId)
+			</td>
 			<td>
 				<a asp-action="Edit" asp-route-id="@item.FarmSpotId">Edit</a> |
 				<a asp-action="Delete" asp-route-id="@item.FarmSpotId">Delete</a>
