--- a/Views/FarmSpot/Delete.cshtml
+++ b/Views/FarmSpot/Delete.cshtml
@@ -1,13 +1,13 @@
 ﻿@using OSRSHelper.Models
 @model OSRSHelper.Models.FarmSpot
 
-<h1>Edit Farm Spot</h1>
+<h1>Delete Farm Spot</h1>
 
 <form method="post">
 
-    <input type="hidden" asp-for="FarmSpotId" /> <!-- Without this edit wont work -->
+    <input type="hidden" asp-for="FarmSpotId" /> <!-- Without this delete wont work -->
 
-    <div class="edit">
+    <div class="delete">
         <div class="form-group">
             <label class="form-label">Name</label>
             <input disabled class="form-control" type="text" asp-for="SpotName" />
