--- a/Views/Product/Details.cshtml
+++ b/Views/Product/Details.cshtml
@@ -1,6 +1,51 @@
-﻿@*
+﻿@using OSRSHelper.Models
+@model OSRSHelper.Models.Product
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
 }
 <h1>Details</h1>
+
+<<div>
+    <h4>Product</h4>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ProductName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ProductName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ProductValue)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ProductValue)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ProductExperience)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ProductExperience)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.FarmType)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.FarmType.FarmTypeId)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Material)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Material.MaterialId)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.MaterialSecond)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.MaterialSecond.MaterialId)
+        </dd>
+    </dl>
+</div>
