--- a/Views/Product/Details.cshtml
+++ b/Views/Product/Details.cshtml
@@ -7,7 +7,7 @@
 }
 <h1>Details</h1>
 
-<<div>
+<div>
     <h4>Product</h4>
     <hr />
     <dl class="row">
@@ -33,19 +33,26 @@
             @Html.DisplayNameFor(model => model.FarmType)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FarmType.FarmTypeId)
+            @Html.DisplayFor(model => model.FarmType.FarmName)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Material)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Material.MaterialId)
+            @Html.DisplayFor(model => model.Material.MaterialName)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.MaterialSecond)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.MaterialSecond.MaterialId)
+            @Html.DisplayFor(model => model.MaterialSecond.MaterialName)
         </dd>
     </dl>
+</div>
+
+<div class="form-group">
+    <label class="form-label">Spot name</label>
+    <select asp-for="FarmTypeId" class="form-control" asp-items="ViewBag.FarmTypeId">
+        <option value="">Select</option> <!-- To be nullable value="" -->
+    </select>
 </div>
