--- a/Views/Product/Details.cshtml
+++ b/Views/Product/Details.cshtml
@@ -50,9 +50,11 @@
     </dl>
 </div>
 
-<div class="form-group">
+@* @Html.DropDownListFor(model => model.FarmTypeId, (IEnumerable<SelectListItem>)ViewBag.FarmTypeId, "Select", new { @class = "form-control" }) *@
+
+@* <div class="form-group">
     <label class="form-label">Spot name</label>
     <select asp-for="FarmTypeId" class="form-control" asp-items="ViewBag.FarmTypeId">
         <option value="">Select</option> <!-- To be nullable value="" -->
     </select>
-</div>
+</div> *@
