Updated Product Details view

--- a/Views/FarmSpot/Index.cshtml
+++ b/Views/FarmSpot/Index.cshtml
@@ -5,7 +5,7 @@
 
 <h1>Farm Spot</h1>
 <p>
-	<a asp-action="Create">Create New</a>
+	<a asp-action="Create" class="btn btn-primary">Create New</a>
 </p>
 <table class="table">
 	<thead>
