--- a/Views/Product/Details.cshtml
+++ b/Views/Product/Details.cshtml
@@ -40,21 +40,40 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Material.MaterialName)
+            @Html.DisplayFor(model => model.Material.MaterialValue)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.MaterialSecond)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.MaterialSecond.MaterialName)
+            @Html.DisplayFor(model => model.MaterialSecond.MaterialValue)
         </dd>
+@*         <dt class="col-sm-2">
+			@Html.DisplayNameFor(model => model.MaterialSecond.MaterialValue)
+        </dt>
+        <dd>
+            <dd class="col-sm-10">
+			@Html.DisplayNameFor(model => model.MaterialSecond.MaterialValue)
+        </dd> *@
     </dl>
 </div>
+@* <div>
+    <a asp-action="MeasureTime" asp-route-id="@Model.ProductId">Measure</a>
+</div> *@
 
 @* @Html.DropDownListFor(model => model.FarmTypeId, (IEnumerable<SelectListItem>)ViewBag.FarmTypeId, "Select", new { @class = "form-control" }) *@
 
-@* <div class="form-group">
+<div class="form-group">
     <label class="form-label">Spot name</label>
-    <select asp-for="FarmTypeId" class="form-control" asp-items="ViewBag.FarmTypeId">
+    <select asp-for="FarmTypeId" class="form-control" asp-items="ViewBag.FarmSpotId">
         <option value="">Select</option> <!-- To be nullable value="" -->
     </select>
-</div> *@
+</div>
+
+<div class="form-group">
+    <label class="form-label">Compare product</label>
+    <select asp-for="ProductId" class="form-control" asp-items="ViewBag.ProductId">
+        <option value="">Select</option> <!-- To be nullable value="" -->
+    </select>
+</div>
