--- a/Views/Product/Details.cshtml
+++ b/Views/Product/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@using OSRSHelper.Models
-@model OSRSHelper.Models.Product
+@model OSRSHelper.Models.ViewModels.ProductViewModel
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
@@ -12,42 +12,45 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductName)
+            @Html.DisplayNameFor(model => model.Products.ProductName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ProductName)
+            @* @Html.DisplayFor(model => model.Products.ProductName) *@
+            @Html.DisplayFor(model => model.ProductSecond.ProductName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductValue)
+            @Html.DisplayNameFor(model => model.Products.ProductValue)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ProductValue)
+            @Html.DisplayFor(model => model.Products.ProductValue)
+            @Html.DisplayFor(model => model.ProductSecond.ProductValue)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductExperience)
+            @Html.DisplayNameFor(model => model.Products.ProductExperience)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ProductExperience)
+            @Html.DisplayFor(model => model.Products.ProductExperience)
+            @Html.DisplayFor(model => model.ProductSecond.ProductExperience)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FarmType)
+            @Html.DisplayNameFor(model => model.Products.FarmType)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FarmType.FarmName)
+            @Html.DisplayFor(model => model.Products.FarmType.FarmName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Material)
+            @Html.DisplayNameFor(model => model.Products.Material)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Material.MaterialName)
-            @Html.DisplayFor(model => model.Material.MaterialValue)
+            @Html.DisplayFor(model => model.Products.Material.MaterialName)
+            @Html.DisplayFor(model => model.Products.Material.MaterialValue)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.MaterialSecond)
+            @Html.DisplayNameFor(model => model.Products.MaterialSecond)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.MaterialSecond.MaterialName)
-            @Html.DisplayFor(model => model.MaterialSecond.MaterialValue)
+            @Html.DisplayFor(model => model.Products.MaterialSecond.MaterialName)
+            @Html.DisplayFor(model => model.Products.MaterialSecond.MaterialValue)
         </dd>
     </dl>
 </div>
@@ -56,18 +59,18 @@
 
 <form method="get">
 
-    <input type="hidden" asp-for="ProductId" /> <!-- Without this edit wont work -->
+    <input type="hidden" asp-for="Products.ProductId" /> <!-- Without this edit wont work -->
 
     <div class="details">
         <div class="form-group">
             <label class="form-label">Spot name</label>
-            <select asp-for="FarmTypeId" class="form-control" asp-items="ViewBag.FarmSpotId">
+            <select asp-for="Products.FarmTypeId" class="form-control" asp-items="ViewBag.FarmSpotId">
                 <option value="">Select</option> <!-- To be nullable value="" -->
             </select>
         </div>
         <div class="form-group">
             <label class="form-label">Compare product</label>
-            <select asp-for="ProductId" class="form-control" asp-items="ViewBag.ProductId">
+            <select asp-for="Products.ProductId" class="form-control" asp-items="ViewBag.ProductId">
                 <option value="">Select</option> <!-- To be nullable value="" -->
             </select>
         </div>
