--- a/Views/FarmSpot/Edit.cshtml
+++ b/Views/FarmSpot/Edit.cshtml
@@ -18,7 +18,7 @@
         </div>
         <div class="form-group">
             <label class="form-label">Farm Type</label>
-            <select asp-for="FarmTypeId" class="form-control" asp-items="ViewBag.FarmTypeId">
+            <select asp-for="FarmTypeId" class="form-control" asp-items="ViewBag.FarmTypeId"> <!-- asp-for loads default choice? -->
                 <option value="">Select</option> <!-- To be nullable value="" -->
             </select>
         </div>
