Minor change to details view

--- a/Views/Product/Details.cshtml
+++ b/Views/Product/Details.cshtml
@@ -75,7 +75,7 @@
         }
     </tbody>
 </table>
-<div>
+@* <div>
     <h4>Product</h4>
     <hr />
     <dl class="row">
@@ -147,7 +147,7 @@
 			</dd>
         }
     </dl>
-</div>
+</div> *@
 
 <form method="get">
     <div class="details">
